add ids to elements

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
             <p>What is my favorite animal?</p>
             <p>
                 <label>
-                    <input type="checkbox">
+                    <input id="tos-checkbox" type="checkbox">
                     I accept the terms of service and pledge
                     to donate all my free time and energy to
                     the worship of your favorite animal.
                 </label>
             </p>
             <p>
-                <button disabled>Show Answer</button>
+                <button id="show-answer-button" disabled>Show Answer</button>
             </p>
         </section>
 
@@ -38,7 +38,7 @@
 
             <div id="cat-container">
                 <p>
-                    <img id="cat-image" src="assets/cats/felix.png">
+                    <img id="image-display" src="assets/cats/felix.png">
                 </p>
                 <p id="name-display">Felix</p>
             </div>
