--- a/index.html
+++ b/index.html
@@ -18,8 +18,13 @@
     <main>
         <section id="intro-section">
             <h2>Intro</h2>
-            <p>Here is a blurb about me</p>
-            <p>What is my favorite animal?</p>
+            <p>
+                Kitty kitty. Singapura british shorthair yet turkish angora british shorthair.
+                Tabby. Himalayan panther, so kitten so british shorthair himalayan burmese.
+                Burmese tiger mouser cougar turkish angora. Havana brown bombay, and panther so
+                leopard or sphynx but savannah. Balinese singapura lion. Tomcat bombay jaguar,
+                balinese yet scottish fold. Lion sphynx tiger. Kitty kitten.
+            </p>
             <p>
                 <label>
                     <input id="tos-checkbox" type="checkbox">
@@ -28,6 +33,7 @@
                     the worship of your favorite animal.
                 </label>
             </p>
+            <p>What is my favorite animal?</p>
             <p>
                 <button id="show-answer-button" disabled>Show Answer</button>
             </p>
@@ -40,13 +46,13 @@
                 <p>
                     <img id="image-display" src="assets/cats/felix.png">
                 </p>
-                <p id="name-display">Felix</p>
+                <p id="name-display">Jones</p>
             </div>
 
             <h2>Design this Cat</h2>
             <p>
                 <label>
-                    Select an image:
+                    Select an image type:
                     <select id="image-select">
                         <option value="felix.png" selected>Felix</option>
                         <option value="duchess.png">Duchess</option>
@@ -56,7 +62,7 @@
             </p>
             <p>
                 <label>
-                    Name: <input id="name-input" value="Felix">
+                    Name: <input id="name-input" value="Jones">
                 </label>
             </p>
         </section>
